--- a/MODEL_CALCULATIONS/SIMPLE_DATA_AGE_DISTRIBUTION_PLOT/makefile
+++ b/MODEL_CALCULATIONS/SIMPLE_DATA_AGE_DISTRIBUTION_PLOT/makefile
@@ -1,8 +1,9 @@
 ################################################# 
-PROJECT_DIR=${HOME}/SIMPLE_DATA_AGE_DISTRIBUTION_PLOT/
+PROJECT_DIR=${HOME}/PROJECT_MOSQUITO_ALERT/
 LIBRARY_DIR=${PROJECT_DIR}Library/
 INCLUDE_DIR=${PROJECT_DIR}Include/
-WKD=${PROJECT_DIR}
+IO_DIR=${PROJECT_DIR}Library/IO_Library/
+WKD=${PROJECT_DIR}SIMPLE_DATA_AGE_DISTRIBUTION_PLOT/
 CPGPLOT = ${HOME}/CPGPLOT/
 EXTRA_LIBRARY_PATH=-L/usr/local/pgplot
 EXTRA_LIBRARY_PATH+=-L${CPGPLOT}library_basic_UTL
@@ -10,11 +11,13 @@ EXTRA_LIBRARY_PATH+=-L${CPGPLOT}library
 EXTRA_LIBRARY_PATH+=-L/usr/lib
 EXTRA_LIBRARY_PATH+=-L/usr/local/lib
 EXTRA_LIBRARY_PATH+=-L${LIBRARY_DIR}
+EXTRA_LIBRARY_PATH+=-L${IO_DIR}
 EXTRA_INCLUDE_PATH=-I/usr/local/pgplot/
 EXTRA_INCLUDE_PATH+=-I/usr/include/plplot/
 EXTRA_INCLUDE_PATH+=-I${INCLUDE_DIR}
 EXTRA_INCLUDE_PATH+=-I${PROJECT_DIR}
 EXTRA_INCLUDE_PATH+=-I${LIBRARY_DIR}
+EXTRA_INCLUDE_PATH+=-I${IO_DIR}
 EXTRA_INCLUDE_PATH+=-I${WKD}
 EXTRA_INCLUDE_PATH+=-I${CPGPLOT}library/
 EXTRA_INCLUDE_PATH+=-I${CPGPLOT}library_basic_UTL/
@@ -22,7 +25,7 @@ EXTRA_INCLUDE_PATH+=-I${CPGPLOT}
 #################################################
 CPG=CPGPLOT_REPRESENTATION############## Possibilities: Note: No other options possible! 
 #################################################
-LDFLAGS+=${EXTRA_LIBRARY_PATH}  -lm -lgsl -lgslcblas -lda_cpgplot_XY_GRID_FILE -lda_cpgplot_BASIC
+LDFLAGS+=${EXTRA_LIBRARY_PATH}  -lm -lgsl -lgslcblas -lda_cpgplot_XY_GRID_FILE -lda_cpgplot_BASIC -lda_IO
 CXXFLAGS+=${EXTRA_INCLUDE_PATH} -g -D${CPG} #-Wall 
 ######## either -g or some optimization opiton, for instance, -O3 
 ###################################################################
